@@ -1,3 +1,8 @@
+Sun Feb 22 18:40:04 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/option.c (inspect_errno): new function.
+	  (sockopt_inspect): use inspect_errno for SO_ERROR.
+
 Sun Feb 22 15:11:51 2009  Tanaka Akira  <akr@fsij.org>
 
 	* re.c (Init_Regexp): define Regexp::FIXEDENCODING.  [ruby-dev:38066]
